[package]
name = "hikvision"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-multipart = "0.4.0"
serde = {version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
futures-util = "0.3.25"
